--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
         .cta-button {
             padding: 10px 24px;
             background-color: #fff;
-            color: #77c6c7;
+            color: #61a2a3;
             font-weight: bold;
             border-radius: 8px;
             text-decoration: none;
